--- a/Main/Main.csproj
+++ b/Main/Main.csproj
@@ -2,15 +2,15 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\3-Layer\BusinessLogic\BusinessLogic.csproj" />
-    <ProjectReference Include="..\Clean\Application\Application.csproj" />
-    <ProjectReference Include="..\Clean\Infrastructure\Infrastructure.csproj" />
+    <ProjectReference Include="..\Clean\User\User.Application\User.Application.csproj" />
+    <ProjectReference Include="..\Clean\User\User.Infrastructure\User.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
